# lead_lag_hft

./: Cargo.toml  README.md
lead_lag_hft/: .gitignore  Cargo.toml  offset_strategy1.toml
lead_lag_hft/src/: lib.rs  oms.rs  strategy.rs
lead_lag_hft/src/calculator/: delay_ema.rs  mod.rs  offset_cache.rs  offset_ema.rs  spread_ema.rs
lead_lag_hft/src/domains/: common.rs
lead_lag_hft/src/models/: offset_theo_price.rs
lead_lag_hft/src/offset_taker_strategy/: mod.rs  offset_taker_config.rs
lead_lag_hft/src/utils/: mod.rs  redis_util.rs
shell/: new_coin_maker.toml  new_coin_maker_run  offset_taker.toml  offset_taker2.toml  offset_taker2_run  offset_taker_run
src/: common_config.rs  lib.rs  oms.rs  redis_reporter.rs  reporter.rs  strategy.rs
src/calculator/: mod.rs  tema.rs
src/models/: basic_linear_pricing.rs  basic_pricing.rs  mod.rs
src/new_coin_maker/: mod.rs  new_coin_maker_config.rs  new_coin_maker_model.rs
src/offset_taker_strategy/: mod.rs
src/utils/: bk_util.rs  redis_util.rs
